--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         jvmTarget = "1.8"
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
