--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.browser:browser:1.2.0"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
     implementation project(':data')
     testImplementation 'junit:junit:4.12'
