--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 14 11:48:44 IST 2023
-sdk.dir=C\:\\Users\\rajad\\AppData\\Local\\Android\\Sdk
+#Mon Sep 23 11:18:56 IST 2024
+sdk.dir=/Users/gabriel.rajadurai/Library/Android/sdk
